--- a/bai-3.html
+++ b/bai-3.html
@@ -2,26 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sử dụng các hàm có sẵn của mảng</title>
+    <title>Bài 3</title>
 </head>
 <body>
 <Script>
-    // let mycolor = ["red", "green", "white", "black"];
-    // document.write(mycolor);
-    // alert(mycolor)
-
-
- // let arr = [7, 2, 4, 8, 6, 30 ];
- // let num = [];
- // for (let i = 0; i < arr.length; i++) {
- //     if ((arr[i-1] %2 === 0) && (arr[i] %2 === 0)) {
- //         num.push("-" , arr[i] );
- //     } else {
- //         num.push(arr[i]);
- //     }
- // }
- // document.write(num.join());
-
     const UPPER = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
     const LOWER = 'abcdefghijklmnopqrstuvwxyz';
     let arr = "jYmnGjGkGHbn";
